--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink:           pretty
 title:               wildtree's blog
 tagline:             anyone got an idea for a tagline?
 url:                 http://thewildtree.github.io
-paginate:            1
+paginate:            5
 baseurl:             ""
 
 # Assets
@@ -25,3 +25,6 @@ author:
 gems:
   - jekyll-paginate
   - jekyll-gist
+
+plugins:
+  [jekyll-paginate]
