--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,14 @@ author:
 
 # Gems
 gems:
+  - jekyll-feed
   - jekyll-paginate
   - jekyll-gist
 
+feed:
+  tags:
+    only:
+      - pitivi
+
 plugins:
-  [jekyll-paginate]
+  [jekyll-paginate, jekyll-feed]
