--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ permalink:           pretty
 
 # Setup
 title:               wildtree's blog
-tagline:             anyone got an idea for a tagline?
+tagline:             " - hello!"
 url:                 http://thewildtree.github.io
 paginate:            5
 baseurl:             ""
